@@ -200,23 +200,23 @@ IndexedBits(mn:Integer): BitAggregate() with
               s.i := if v.j then t else f
             s::OutputForm
 
-        new(n, b)       == BVEC_-MAKE_-FULL(n,TRUTH_-TO_-BIT(b)$Lisp)$Lisp
-        empty()         == BVEC_-MAKE_-FULL(0,0)$Lisp
-        copy v          == BVEC_-COPY(v)$Lisp
-        #v              == BVEC_-SIZE(v)$Lisp
-        v = u           == BVEC_-EQUAL(v, u)$Lisp
-        v < u           == BVEC_-GREATER(u, v)$Lisp
-        _and(u, v)      == (#v=#u => BVEC_-AND(v,u)$Lisp; map("and",v,u))
-        _or(u, v)       == (#v=#u => BVEC_-OR(v, u)$Lisp; map("or", v,u))
-        xor(v,u)        == (#v=#u => BVEC_-XOR(v,u)$Lisp; map("xor",v,u))
+        new(n, b)    == make_BVEC(n, bool_to_bit(b)$Lisp)$Lisp
+        empty()      == make_BVEC(0, 0)$Lisp
+        copy v       == copy_BVEC(v)$Lisp
+        #v           == size_BVEC(v)$Lisp
+        v = u        == equal_BVEC(v, u)$Lisp
+        v < u        == greater_BVEC(u, v)$Lisp
+        _and(u, v)   == (#v = #u => and_BVEC(v, u)$Lisp; map("and", v, u))
+        _or(u, v)    == (#v = #u => or_BVEC(v, u)$Lisp; map("or", v, u))
+        xor(v, u)    == (#v = #u => xor_BVEC(v, u)$Lisp; map("xor", v, u))
         setelt(v:%, i:Integer, f:Boolean) ==
-          BVEC_-SETELT(v, range(v, i-mn), TRUTH_-TO_-BIT(f)$Lisp)$Lisp
+            SETELT_BVEC(v, range(v, i - mn), bool_to_bit(f)$Lisp)$Lisp
         elt(v:%, i:Integer) ==
-          BIT_-TO_-TRUTH(BVEC_-ELT(v, range(v, i-mn))$Lisp)$Lisp
+            bit_to_bool(ELT_BVEC(v, range(v, i - mn))$Lisp)$Lisp
 
-        Not v           == BVEC_-NOT(v)$Lisp
-        And(u, v)       == (#v=#u => BVEC_-AND(v,u)$Lisp; map("and",v,u))
-        Or(u, v)        == (#v=#u => BVEC_-OR(v, u)$Lisp; map("or", v,u))
+        Not v        == not_BVEC(v)$Lisp
+        And(u, v)    == (#v = #u => and_BVEC(v, u)$Lisp; map("and", v, u))
+        Or(u, v)     == (#v = #u => or_BVEC(v, u)$Lisp; map("or", v, u))
 
 @
 \section{domain BITS Bits}
