@@ -1,5 +1,12 @@
 2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/algebra/boolean.spad.pamphlet,
+	src/interp/g-util.boot, src/interp/macros.lisp,
+	src/interp/primitives.lisp, src/interp/scan.boot,
+	src/interp/vmlisp.lisp: Misc cleanups.
+
+2012-01-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/list.spad.pamphlet,
 	src/interp/*: Remove not needed macros.
 
